--- a/automation_deliveries_client/Content/main.css
+++ b/automation_deliveries_client/Content/main.css
@@ -1,18 +1,5 @@
-﻿/*!
- * BLOCKS - Responsive Dashboard Theme
- *
- * Hey! Thanks for download this theme!
- * This bootstrap theme is totally free. You can edit, share, distribute, use and whatever you want.
- * Credits are always appreciated.
- * Please, feel free to contact me if you have any questions regarding this theme.
- *
- *
- * Copyright 2013 
- * Created by: Carlos Alvarez
- * URL: http://Alvarez.is
- * Designed and built based on Twitter Bootstrap.
- */
-
+/*!
+ 
 /* COLOR REFERENCE
 - #1f1f1f (Background Color)
 - #3d3d3d (Dash-unit and half-unit Section) 
@@ -21,7 +8,6 @@
 - #b2c831 (Green - Used in titles, badges, bars and other) 
 - #bdbdbd & #fff (Font colors)
 */
-
 
 /**********BASE CONFIGURATIONS**********/   
 body {
@@ -207,9 +193,19 @@ h5 {
 	line-height: 2px;
 	letter-spacing: 0px;
 	color: #ffffff;
-    
 }
 
+.dash-unitb h2 {
+	font-family: 'Raleway', sans-serif;
+	font-weight:300;
+	font-size: 20px;
+    padding-left:140px;
+    width:auto;
+	line-height: 2px;
+	letter-spacing: 0px;
+	color: #ffffff;
+    text-align:center;
+}
 
 /**********Half-Unit / Used in index.html**********/   
 .half-unit {		
