Ajustes Estilos CSS

--- a/automation_deliveries_client/Site.Master
+++ b/automation_deliveries_client/Site.Master
@@ -5,7 +5,8 @@
 <html lang="en">
 
 <!-- Automation Deliveries CLIENT - Web App para automação de entrega de encomendas - Módulo Cliente-->
-<!-- Criação    : Carlos Sales https://github.com/CarlosSalesNaturalTec  / 2016's-->
+<!-- Criação    : Carlos Sales https://github.com/CarlosSalesNaturalTec -->
+<!-- Copyright  : 2016 -->
 <!-- Recursos   : ASP.NET / JAVASCRIPT / CSS Bootstrap / SQL / Windows Azure -->
 <!-- Módulo     : SITE MASTER  - MENU PRINCIPAL -->
 <!---------------------------------------------------------------------------------------------------------------------------------->
