--- a/automation_deliveries_master/Content/main.css
+++ b/automation_deliveries_master/Content/main.css
@@ -1,18 +1,5 @@
-﻿/*!
- * BLOCKS - Responsive Dashboard Theme
- *
- * Hey! Thanks for download this theme!
- * This bootstrap theme is totally free. You can edit, share, distribute, use and whatever you want.
- * Credits are always appreciated.
- * Please, feel free to contact me if you have any questions regarding this theme.
- *
- *
- * Copyright 2013 
- * Created by: Carlos Alvarez
- * URL: http://Alvarez.is
- * Designed and built based on Twitter Bootstrap.
- */
-
+/*!
+ 
 /* COLOR REFERENCE
 - #1f1f1f (Background Color)
 - #3d3d3d (Dash-unit and half-unit Section) 
@@ -21,7 +8,6 @@
 - #b2c831 (Green - Used in titles, badges, bars and other) 
 - #bdbdbd & #fff (Font colors)
 */
-
 
 /**********BASE CONFIGURATIONS**********/   
 body {
@@ -58,7 +44,7 @@ h5 {
 	margin-bottom: 30px;
 	padding-bottom:10px;
 	border: 1px solid #383737;
-	background-image:url('../images/sep-half.png');
+	background-image:url('../img/sep-half.png');
 	background-color: #3d3d3d;
 	color:white;
 	height:390px;
@@ -75,7 +61,23 @@ h5 {
     text-align:center;
 }
 
+.dash-unitc{
+	border: 1px solid #383737;
+	background-color: #3d3d3d;
+    height:40px;
+	color:white;
+    text-align:center;
+}
+
 .dash-unit:hover {
+	background-color: #4f4f4f;
+	-moz-box-shadow:    3px 3px 2px 0px #151515;
+    -webkit-box-shadow: 3px 3px 2px 0px #151515;
+    box-shadow:         3px 3px 2px 0px #151515;
+
+}
+
+.dash-unitb:hover {
 	background-color: #4f4f4f;
 	-moz-box-shadow:    3px 3px 2px 0px #151515;
     -webkit-box-shadow: 3px 3px 2px 0px #151515;
@@ -182,6 +184,28 @@ h5 {
 	vertical-align:middle;
 }
 
+.dash-unitb h1 {
+	font-family: 'Raleway', sans-serif;
+	font-weight:300;
+	font-size: 20px;
+    padding-left:8px;
+    width:auto;
+	line-height: 2px;
+	letter-spacing: 0px;
+	color: #ffffff;
+}
+
+.dash-unitb h2 {
+	font-family: 'Raleway', sans-serif;
+	font-weight:300;
+	font-size: 20px;
+    padding-left:140px;
+    width:auto;
+	line-height: 2px;
+	letter-spacing: 0px;
+	color: #ffffff;
+    text-align:center;
+}
 
 /**********Half-Unit / Used in index.html**********/   
 .half-unit {		
@@ -384,7 +408,7 @@ textarea {
 
 digiclock {
 	font-size: 30px;
-	color: #b2c831;
+	color: #fff;
 	text-align: center;
 	line-height: 60px;
 	margin-left: auto	
@@ -392,6 +416,10 @@ digiclock {
 
 .clockcenter {
 	text-align:center;
+}
+
+.clockcenter2 {
+    align-content:center
 }
 
 
