--- a/automation_deliveries_client/Site.Master
+++ b/automation_deliveries_client/Site.Master
@@ -101,7 +101,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a id="A1" class="navbar-brand" runat="server" href="~/">LogTransportes</a>
+                    <a id="A1" class="navbar-brand" runat="server">LogTransportes</a>
                 </div>
 
                 <div class="navbar-collapse collapse">
