--- a/delivcli/Site.Mobile.Master
+++ b/delivcli/Site.Mobile.Master
@@ -21,7 +21,9 @@
 <body>
     <form id="form1" runat="server">
     <div>
-        <h1>Mobile Master Page</h1>
+        <h2>Versão de carregamento rápido</h2>
+        <h4>Para versão completa, clique em Swicht to Desktop.</h4>
+
         <asp:ContentPlaceHolder runat="server" ID="FeaturedContent" />
         <section class="content-wrapper main-content clear-fix">
             <asp:ContentPlaceHolder runat="server" ID="MainContent" />
