--- a/delivcli/Site.Master
+++ b/delivcli/Site.Master
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="author" content="Carlos Sales - Natural Tecnologia">
-    <title>LogTransportes - <%: Page.Title %></title>
+    <title>LogLogística- <%: Page.Title %></title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
