--- a/delivcli/Site.Master
+++ b/delivcli/Site.Master
@@ -67,15 +67,15 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server">LogTransportes</a>
+                    <a class="navbar-brand" runat="server">LOGLogística</a>
                 </div>
 
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Conectar</a></li>
                         <li><a id="A2" runat="server" href="~/Painel.aspx">Painel</a></li>
-                        <li><a id="A1" runat="server" href="~/Mapa.aspx">Mapa</a></li>
-                        <li><a id="A4" runat="server" href="~/Cad_Funcionario.aspx">Funcionarios</a></li>
+                        <li><a id="A1" runat="server" href="~/Mapa.aspx">Localizar</a></li>
+                        <li><a id="A4" runat="server" href="~/Cad_Funcionario.aspx">Entregadores</a></li>
 
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Entregas <span class="caret"></span></a>
