--- a/delivcli/Site.Master
+++ b/delivcli/Site.Master
@@ -74,15 +74,15 @@
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Conectar</a></li>
                         <li><a id="A2" runat="server" href="~/Painel.aspx">Painel</a></li>
-                        <li><a id="A1" runat="server" href="~/Mapa.aspx">Localizar</a></li>
+                        <li><a id="A1" runat="server" href="~/Mapa.aspx">Status Atual</a></li>
                         <li><a id="A4" runat="server" href="~/Cad_Funcionario.aspx">Entregadores</a></li>
 
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Entregas <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="Cad_Entregas.aspx">Simples</a></li>
+                                <li><a href="Cad_Entregas.aspx">Listagem</a></li>
                                 <li class="divider"></li>
-                                <li><a href="Cad_Entregas_Geocoding.aspx">Com endereço no Mapa</a></li>
+                                <li><a href="Cad_Entregas_Geocoding.aspx">Nova Entrega</a></li>
                             </ul>
                         </li>
 
