--- a/delivcli/Site.Master
+++ b/delivcli/Site.Master
@@ -74,7 +74,7 @@
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Conectar</a></li>
                         <li><a id="A2" runat="server" href="~/Painel.aspx">Painel</a></li>
-                        <li><a id="A1" runat="server" href="~/Mapa.aspx">Status Atual</a></li>
+                        <li><a id="A1" runat="server" href="~/Mapa.aspx">Situação Atual</a></li>
                         <li><a id="A4" runat="server" href="~/Cad_Funcionario.aspx">Entregadores</a></li>
 
                         <li class="dropdown">
