--- a/delivcli/Site.Master
+++ b/delivcli/Site.Master
@@ -89,11 +89,11 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Relatórios <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="Relatorio2.aspx">Performace</a></li>
+                                <li><a href="Relatorio2.aspx?Per=1">Performace</a></li>
                                 <li class="divider"></li>
-                                <li><a href="Relatorio1.aspx">Produtividade</a></li>
+                                <li><a href="Relatorio1.aspx?Per=1">Produtividade</a></li>
                                 <li class="divider"></li>
-                                <li><a href="#">Distância Percorrida</a></li>
+                                <li><a href="Relatorio3.aspx?Per=1">Distância Percorrida</a></li>
                             </ul>
                         </li>
 
